eviction data preprocessed

--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -129,6 +129,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Eviction Data by County"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eviction = pd.read_csv(\n",
+    "   \"data/eviction/county_proprietary_valid_2000_2018.csv\",\n",
+    "   dtype = {\n",
+    "      \"cofips\": str,\n",
+    "      \"year\": int,\n",
+    "      \"filing_rate\": float\n",
+    "   }\n",
+    "   )\n",
+    "eviction = eviction[[\"cofips\", \"year\", \"filing_rate\"]]\n",
+    "eviction_final = eviction.groupby([\"cofips\"], as_index = False).max(\"year\")\n",
+    "# Test if there is 1 value for each county\n",
+    "#eviction_final[[\"cofips\", \"year\"]].groupby([\"cofips\"], as_index = False).nunique()[\"year\"].unique()\n",
+    "\n",
+    "# Subset and Rename columns accordingly\n",
+    "eviction_final = eviction_final[[\"cofips\", \"filing_rate\"]]\n",
+    "eviction_final.columns = [\"county_GEOID\", \"filing_rate\"]\n",
+    "\n",
+    "# Format county GEOID properly - fill in zeros accordingly\n",
+    "eviction_final[\"county_GEOID\"] = np.where(\n",
+    "   eviction_final[\"county_GEOID\"].str.len() == 4,\n",
+    "   \"0\" + eviction_final[\"county_GEOID\"],\n",
+    "   eviction_final[\"county_GEOID\"]\n",
+    ")\n",
+    "\n",
+    "# Split county_GEOID into STATEFP and COUNTYFP for overall join at the end\n",
+    "eviction_final[\"STATEFP\"] = eviction_final[\"county_GEOID\"].str[:2]\n",
+    "eviction_final[\"COUNTYFP\"] = eviction_final[\"county_GEOID\"].str[2:]\n",
+    "eviction_final.pop(\"county_GEOID\")\n",
+    "\n",
+    "# Write out\n",
+    "eviction_final.to_csv(\"clean_data/non_energy/eviction.csv\", index = False)\n",
+    "eviction_final.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Cleaning Energy Variables"
    ]
   },
