e affodability county geoid split into statefp and countyfp

--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -362,6 +362,11 @@
     "e_affordability = e_affordability.astype({\"avg_shortfall_usd\": float})\n",
     "e_affordability = e_affordability.fillna(-999)\n",
     "\n",
+    "# Split county_GEOID into STATEFP and COUNTYFP for overall join at the end\n",
+    "e_affordability[\"STATEFP\"] = e_affordability[\"county_GEOID\"].str[:2]\n",
+    "e_affordability[\"COUNTYFP\"] = e_affordability[\"county_GEOID\"].str[2:]\n",
+    "e_affordability.pop(\"county_GEOID\")\n",
+    "\n",
     "# Write out\n",
     "e_affordability.to_csv(\"clean_data/energy/home_energy_affordability_gap.csv\", index = False)\n",
     "e_affordability.head()"
