updated information for extra energy and eviction data

--- a/retrieval.ipynb
+++ b/retrieval.ipynb
@@ -206,7 +206,7 @@
     "\n",
     "### Eviction Data\n",
     "\n",
-    "Used the data from the [Eviction lab](https://evictionlab.org/eviction-tracking/get-the-data/). Download the monthly data at a census tract level for all states. Last collected on 06/27/2022 - contains census tract level data for all months from 01/2020 - 05/2022. Note that this does not offer full coverage of the US."
+    "Used the data from the [Eviction lab](https://data-downloads.evictionlab.org/#data-for-analysis/). Download the county level proprietary data. Method for how this data was calculated is found [here](https://evictionlab.org/docs/Eviction_Lab_Methodology_Report_2022.pdf). Note that this does not offer full coverage of the US."
    ]
   },
   {
@@ -228,21 +228,29 @@
     "\n",
     "All these files were then concatenated together to create a full US dataset.\n",
     "\n",
+    "### ACEEE\n",
+    "\n",
+    "An overview of the ACEEE scorecard is provided [here](https://www.aceee.org/state-policy/scorecard). Full methodology for how gas and electric spending are found in this [report](https://www.aceee.org/research-report/u2201), specifically taken from tables 1 and 2.\n",
+    "\n",
+    "### Community Power Scorecard\n",
+    "\n",
+    "The [2022 version](https://cdn.ilsr.org/wp-content/uploads/2022/02/2022-Scorecard-Methodology-Full-Scores.pdf?_ga=2.53695528.1839514613.1661261912-1838658277.1661261912&_gl=1*1jo79qe*_ga*MTgzODY1ODI3Ny4xNjYxMjYxOTEy*_ga_M3134750WM*MTY2MTI2MTkxMS4xLjEuMTY2MTI2MTkxMS4wLjAuMA) provided by Institute for Local Self Reliance was used. Each state was assessed on 11 indicators, with a maximum of 44 points. The raw point score provided by ISLR for each state were divided by 44 to determine the % of points earned (out of 100%).\n",
+    "\n",
     "### Reliability data\n",
     "\n",
     "Taken from [EIA Form 861](https://www.eia.gov/electricity/data/eia861/). Note this data exists at a service territory level and needs to be transformed to census tract level data. Main variables to look at are CAIDI, SAIDI and SAIFI.\n",
     "\n",
     "### Median income of solar installers by tract\n",
     "\n",
-    "This data was collected by Justin Schott.\n",
+    "Median income for rooftop solar installers data from [Lawrence Berkeley National Lab](https://www.lbl.gov/). Note this was collected by contacting the lab directly.\n",
     "\n",
     "### Residential rates as percentage of commercial and industrial rates\n",
     "\n",
-    "This data was collected by Justin Schott.\n",
+    "Data pulled from [EIA Electric Power Monthly](https://www.eia.gov/electricity/monthly/epm_table_grapher.php?t=epmt_5_6_a). We used December 2021 data (although May  2022 data is now available). Through excel we calculated the residential rate per kWh (in cents) as a percentage of the commercial rate per kWh (i.e. divided by) and as a percentage of the industrial rate per kWh. These two figures (residential/commerical and residential/industrial) were then averaged and reported as a single percentage, with 100% being equal rates, <100% reflecting residential rates lower than the average of C&I rates, and >100% reflecting residential rates than the average of C&I rates.\n",
     "\n",
-    "## Shutoff protection scores\n",
+    "### Home Energy Affordability Gap\n",
     "\n",
-    "This data was collected by Justin Schott."
+    "The Home Energy Affordability Gap's site is [here](http://www.homeenergyaffordabilitygap.com/index.html). Note the data was collected by directly contacting the firm."
    ]
   },
   {
