updated retrieval process

--- a/retrieval.ipynb
+++ b/retrieval.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8d89e542-c7eb-46fb-b43c-36f6eabc0260",
    "metadata": {
     "tags": []
@@ -48,8 +48,9 @@
     "    \"internet_access\": \"B28002_013E\", # Number of households with No Internet Access\n",
     "    \"total_households\": \"B09019_003E\", # Total number of households\n",
     "    \"labor_force_rate\": \"S2301_C02_001E\", # Labor Force Participation Rate for population 16 years or older\n",
-    "    \"pop_16_older\": \"S2301_C01_001E\", # Population 16 years or older\n",
-    "    \"less_than_hs\": \"S2301_C01_032E\", # Population 25 to 64 years that are Less than high school graduate\n",
+    "    #\"pop_16_older\": \"S2301_C01_001E\", # Population 16 years or older\n",
+    "    #\"less_than_hs\": \"S2301_C01_032E\", # Population 25 to 64 years that are Less than high school graduate\n",
+    "    \"less_than_hs\": \"B06009_002E\", # Population age 25+ with no HS diploma\n",
     "    \"insured\": \"S2701_C02_001E\", # Insured population\n",
     "    \"senior_living_alone\": \"S1101_C01_013E\", # Number of households - householder 65+ years old living alone\n",
     "    \"median_income\": \"B07011_001E\", # Median income for population in the last 12 months\n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e1296e56-9b5c-4276-a81c-ff95935bbee6",
    "metadata": {},
    "outputs": [],
@@ -252,14 +253,6 @@
     "\n",
     "The Home Energy Affordability Gap's site is [here](http://www.homeenergyaffordabilitygap.com/index.html). Note the data was collected by directly contacting the firm."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68112d97-8fe3-4332-92a2-57da7bc8ccb1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
