renamed community power score column

--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -564,6 +564,7 @@
     "   \"total_percent_score\": float\n",
     "})\n",
     "community_power.pop(\"STATE\")\n",
+    "community_power = community_power.rename(columns = {\"total_percent_score\": \"community_power_score\"})\n",
     "\n",
     "eviction = pd.read_csv(\"clean_data/non_energy/eviction.csv\", dtype = {\n",
     "   \"filing_rate\": float,\n",
