eep dataset with simplified 500k us map

--- a/support_overview.ipynb
+++ b/support_overview.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "66d75b2e-cfc6-4bd6-98ce-7c5260d24117",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.9/site-packages/geopandas/_compat.py:111: UserWarning: The Shapely GEOS version (3.9.1-CAPI-1.14.2) is incompatible with the GEOS version PyGEOS was compiled with (3.10.1-CAPI-1.16.0). Conversions between both will be slow.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading Libraries needed\n",
     "import os\n",
@@ -21,7 +30,8 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "import matplotlib"
    ]
   },
   {
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "b482e179-f12b-4245-ae10-eef6a3d02141",
    "metadata": {},
    "outputs": [
@@ -94,7 +104,7 @@
     "state_fips = list(state_fips_df[\"STATE\"])\n",
     "base_shp_url = \"https://www2.census.gov/geo/tiger/TIGER2021/TRACT/\"\n",
     "\n",
-    "geo_fp = \"data/geography/\"\n",
+    "geo_fp = \"data/geography\"\n",
     "\n",
     "# Iterate through all state fips codes and get their shapefile\n",
     "for curr_state in state_fips:\n",
@@ -124,7 +134,7 @@
    "outputs": [],
    "source": [
     "# Gets list of all census tracts for all census tracts from shapefiles\n",
-    "geo_fp = \"data/geography/\"\n",
+    "geo_fp = \"data/geography/2021\"\n",
     "shp_files = os.listdir(geo_fp)\n",
     "\n",
     "census_tract_df = None\n",
@@ -136,7 +146,7 @@
     "   curr_gpd = gpd.read_file(curr_fp)\n",
     "\n",
     "   # limit to relevant columns\n",
-    "   curr_gpd = curr_gpd[[\"STATEFP\", \"COUNTYFP\", \"TRACTCE\", \"GEOID\"]]\n",
+    "   curr_gpd = curr_gpd[[\"STATEFP\", \"COUNTYFP\", \"TRACTCE\", \"GEOID\", \"geometry\"]]\n",
     "\n",
     "   # add to overall census tract dataframe\n",
     "   if not (census_tract_df is None):\n",
@@ -147,7 +157,12 @@
     "   print(f\"{shp_file} done!\")\n",
     "\n",
     "# Write out overall census tract dataframe\n",
-    "census_tract_df.to_csv(os.path.join(geo_fp, \"tract_metadata.csv\"), index = False)\n",
+    "#census_tract_df.to_csv(os.path.join(geo_fp, \"tract_metadata.csv\"), index = False)\n",
+    "census_tract_df = gpd.GeoDataFrame(\n",
+    "    census_tract_df,\n",
+    "    geometry=\"geometry\"\n",
+    ")\n",
+    "census_tract_df.to_file(os.path.join(geo_fp, \"updated_complete_tract.geojson\"), driver='GeoJSON')\n",
     "print(\"Done writing census tract metadata!\")"
    ]
   },
@@ -161,12 +176,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29faa0f8-3269-44b0-8d44-55fcfaaa99f9",
+   "cell_type": "markdown",
+   "id": "d7d5721e-e5fa-4825-a408-29a0082f2efd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## US Census API Interaction\n",
+    "In order to interact with the US Census Bureau API you need to sign up for an [API key here](https://api.census.gov/data/key_signup.html)."
+   ]
   }
  ],
  "metadata": {
