seniors living alone and disability variables fixed, automated 500k map pull

--- a/retrieval.ipynb
+++ b/retrieval.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6ec36fe2-6c0d-47d2-a968-fa4348a3ab09",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8d89e542-c7eb-46fb-b43c-36f6eabc0260",
    "metadata": {
     "tags": []
@@ -42,22 +42,20 @@
    "source": [
     "# List of variables taken from US CENSUS bureau\n",
     "census_vars = {\n",
-    "    \"total_pop\": \"B01001_001E\", # Total population\n",
+    "    \"total_pop\": \"S0101_C01_001E\",#\"B01001_001E\", # Total population\n",
     "    \"white_no_hispanic\": \"B01001H_001E\", # White Alone, not Hispanic or Latino\n",
     "    \"year_built\": \"B25035_001E\", # Median Year structure was built\n",
     "    \"internet_access\": \"B28002_013E\", # Number of households with No Internet Access\n",
     "    \"total_households\": \"B09019_003E\", # Total number of households\n",
     "    \"labor_force_rate\": \"S2301_C02_001E\", # Labor Force Participation Rate for population 16 years or older\n",
-    "    #\"pop_16_older\": \"S2301_C01_001E\", # Population 16 years or older\n",
-    "    #\"less_than_hs\": \"S2301_C01_032E\", # Population 25 to 64 years that are Less than high school graduate\n",
     "    \"less_than_hs\": \"B06009_002E\", # Population age 25+ with no HS diploma\n",
     "    \"insured\": \"S2701_C02_001E\", # Insured population\n",
-    "    \"senior_living_alone\": \"S1101_C01_013E\", # Number of households - householder 65+ years old living alone\n",
+    "    \"seniors_living_alone\": \"B09021_023E\", # population 65+ living alone\n",
     "    \"median_income\": \"B07011_001E\", # Median income for population in the last 12 months\n",
     "    \"occupied_housing_units\": \"S2501_C01_001E\", # Total number of housing units\n",
     "    \"owner_occupied\": \"S2501_C03_001E\", # Number of owner occupied housing units\n",
     "    \"renter_occupied\": \"S2501_C05_001E\", # Number of renter occupied housing units\n",
-    "    \"disabled\": \"B18140_002E\", # Population 16+ years old with any disability with earnings\n",
+    "    \"disabled\": \"S1810_C02_001E\",#\"B18140_002E\", # Population 16+ years old with any disability with earnings\n",
     "    \"pop_16_plus\": \"B18140_001E\" # Population 16+ with earnings\n",
     "}"
    ]
@@ -73,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e1296e56-9b5c-4276-a81c-ff95935bbee6",
    "metadata": {},
    "outputs": [],
@@ -143,6 +141,18 @@
     "# Get list of State FIPS codes\n",
     "states = pd.read_csv(\"data/support/state_fips.csv\", dtype={\"STATE\": str})\n",
     "states_fips = list(states[\"STATE\"])\n",
+    "\n",
+    "unwanted_states = [\n",
+    "\t\"60\", # American Samoa\n",
+    "  \"66\", # Guam\n",
+    "  \"69\", # Northern Mariana Islands\n",
+    "  \"72\", # Puerto Rico\n",
+    "  \"78\", # Virgin Islands\n",
+    "  \"15\", # Hawaii\n",
+    "  \"02\",  # Alaska\n",
+    "]\n",
+    "\n",
+    "states_fips = [fp for fp in states_fips if not (fp in unwanted_states)]\n",
     "\n",
     "results = None\n",
     "\n",
