--- a/support_overview.ipynb
+++ b/support_overview.ipynb
@@ -92,6 +92,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "5751c8d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use census tract metadata file as base dataframe for joins\n",
+    "# Taken from: https://www.census.gov/geographies/mapping-files/time-series/geo/cartographic-boundary.html\n",
+    "census_tracts = gpd.read_file(\"data/geography/cb_2021_us_tract_500k.zip\", dtype = {\n",
+    "   \"STATEFP\": str,\n",
+    "   \"COUNTYFP\": str,\n",
+    "   \"TRACTCE\": str,\n",
+    "   \"GEOID\": str\n",
+    "})\n",
+    "\n",
+    "unwanted_states = [\n",
+    "\t\"60\", # American Samoa\n",
+    "  \"66\", # Guam\n",
+    "  \"69\", # Northern Mariana Islands\n",
+    "  \"72\", # Puerto Rico\n",
+    "  \"78\", # Virgin Islands\n",
+    "  \"15\", # Hawaii\n",
+    "  \"02\",  # Alaska\n",
+    "]\n",
+    "\n",
+    "census_tracts = census_tracts[~census_tracts.STATEFP.isin(unwanted_states)]\n",
+    "census_tracts.to_file(\"clean_data/cb_2021_us_tract_500k_filtered.json\", driver='GeoJSON')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "55ca4931",
    "metadata": {},
